moved my CSS & JS into a src/ folder for better organization and deployment

--- a/weatherApp.html
+++ b/weatherApp.html
@@ -4,7 +4,7 @@
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="weatherApp_CSS.css" />
+    <link rel="stylesheet" href="src/weatherApp_CSS.css" />
     <title>My weather application</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,6 +57,6 @@
         </p>
       </footer>
     </div>
-    <script src="weatherApp_JS.js"></script>
+    <script src="src/weatherApp_JS.js"></script>
   </body>
 </html>
