Updated link 'on GitHub' to my project folder on GitHub .

--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
             target="_blank"
             >Mantas Zvybas</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/MantaZvy/SheCodes-Projects"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
