Updated the Netlify link to my deploy netfily project link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://main--joyful-raindrop-8ec86c.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
