added weather description (next to day and time), with js code and api live data

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <h1 id="displayCity">London</h1>
             <div class="weather-data">
               <p>
-                <span id="dayNow">Saturday 15:32</span>, moderate rain <br />
+                <span id="dayNow">Saturday 15:32</span>,
+                <span id="weather-description"></span>
+                <br />
                 Humidity:
                 <span class="belowWeatherInfo" id="humidity">87%</span>, Wind:
                 <span class="belowWeatherInfo" id="wind">7.2km/h</span>
