Removed fake HTML data for accurate Humidity and Wind analytics

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <span id="weather-description"></span>
                 <br />
                 Humidity:
-                <span class="belowWeatherInfo" id="humidity">87%</span>, Wind:
-                <span class="belowWeatherInfo" id="wind">7.2km/h</span>
+                <span class="belowWeatherInfo" id="humidity"></span>, Wind:
+                <span class="belowWeatherInfo" id="wind"></span>
               </p>
             </div>
           </div>
