changed js syntax for local time.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 id="displayCity">London</h1>
             <div class="weather-data">
               <p>
-                <span id="dayNow">Saturday 15:32</span>,
+                <span id="time"></span>,
                 <span id="weather-description"></span>
                 <br />
                 Humidity:
