created new span "api-icon" in index.html, positioned and changed size for the API icon, added 2 new js lines for live api icon data representation of the weather forecast

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             </div>
           </div>
           <div class="current-temperature">
-            <span class="temperature-icon">☀️</span>
-            <span class="temperature-value" id="temp-value">14</span>
+            <span id="api-icon"
+              ><img src="" alt="api logos" class="temperature-icon"
+            /></span>
+            <span class="temperature-value" id="temp-value"></span>
             <span class="temperature-unit">°C</span>
           </div>
         </div>
