changed url links of the footer

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
       <footer>
         <p>
           This project was coded by
-          <a
-            href="https://www.linkedin.com/in/mantas-zvybas-700938254/"
-            target="_blank"
+          <a href="https://github.com/MantaZvy" target="_blank"
             >Mantas Zvybas</a
           >
           and is
@@ -64,9 +62,7 @@
             on GitHub</a
           >
           and
-          <a
-            href="https://main--joyful-raindrop-8ec86c.netlify.app/"
-            target="_blank"
+          <a href="https://manta-weather-app.netlify.app/" target="_blank"
             >hosted on Netlify</a
           >
         </p>
