Injected the forecast HTML from JavaScript, added FlexBox for horizontal positioning.

--- a/index.html
+++ b/index.html
@@ -46,20 +46,7 @@
             <span class="temperature-unit">°C</span>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="col-2">
-            <div class="weather-forecast-date">Wed</div>
-            <img
-              src="https://tse1.mm.bing.net/th?id=OIP.u3Oq9ldtW4_PGXv3WxzHQgHaHa&pid=Api&P=0&h=180"
-              alt="temporary weather pic"
-              width="75px"
-            />
-            <div class="weather-forecast-temperatures">
-              <span class="weather-forecast-max-temperature"> 22° </span>
-              <span class="weather-forecast-min-temperature"> 13° </span>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <hr />
       <footer>
