Added an SVG file (generated background-image waves) by implementing through CSS (.spacer), added html elements for better visual representation.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </div>
         <div class="weather-forecast" id="forecast"></div>
       </main>
+      <br />
       <hr />
+      <br />
       <footer>
         <p>
           This project was coded by
@@ -70,5 +72,7 @@
       </footer>
     </div>
     <script src="src/weatherApp_JS.js"></script>
+
+    <div class="spacer"></div>
   </body>
 </html>
